# RocketLauncher

./: .gitignore  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  downloader.rs  lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/forms/: LoginForm.tsx  RegisterForm.tsx
src/components/layout/: TopBar.tsx
src/components/screens/: DebugScreen.tsx  MainScreen.tsx  SettingsScreen.tsx  SplashScreen.tsx  VerifyScreen.tsx
src/components/ui/: BackgroundSlideshow.tsx  RocketLaunchOverlay.tsx
src/lib/: config.ts
src/stores/: serverStore.ts
